objects/Car__c.object
<CustomObject>
    <fields>
        <fullName>Build_Complete__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Build Complete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Price__c</fullName>
        <label>Price</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Gasoline</fullName>
                </value>
                <value>
                    <fullName>Diesel</fullName>
                </value>
                <value>
                    <fullName>Hybrid</fullName>
                </value>
                <value>
                    <fullName>Electric</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Car</label>
    <nameField>
        <label>Car Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Cars</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>